# Parallel_downloader

./: Cargo.toml  Dockerfile  README.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_target_1.rs  fuzz_target_2.rs  fuzz_target_3.rs  fuzz_target_4.rs
src/: config.rs  connection.rs  dns.rs  downloader.rs  error.rs  file_utils.rs  http.rs  lib.rs  main.rs  tcp.rs
tests/: integration_tests.rs
