[package]
name = "parallel-downloader-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
native-tls = "0.2"

[dependencies.parallel-downloader]
path = ".."

[[bin]]
name = "fuzz_target_1"
path = "fuzz_targets/fuzz_target_1.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_target_2"
path = "fuzz_targets/fuzz_target_2.rs"

[[bin]]
name = "fuzz_target_3"
path = "fuzz_targets/fuzz_target_3.rs"
 
[[bin]]
name = "fuzz_target_4"
path = "fuzz_targets/fuzz_target_4.rs"